Correlation/Perception analysis: Individual level

--- a/Analysis/Analysis_Team_Orientation_Correlations_CorrectCollectionRate.Rmd
+++ b/Analysis/Analysis_Team_Orientation_Correlations_CorrectCollectionRate.Rmd
@@ -1,5 +1,5 @@
 ---
-title: 'Dissertation Analysis: Correlations - Collection Rate - Team Orientation'
+title: 'Dissertation Analysis: Correlations - Collection Rate (Individual) - Team Orientation'
 author: "Jamiahus Walton"
 date: "`r Sys.Date()`"
 output: 
@@ -227,7 +227,10 @@ for (my_target in c("Ind", "Team", "Ind_Team")) {
   mutate(performance_reverse = 100 - Performance) %>%
   filter(Target == my_target)
   
+  N_paris<- length(plot_data_ind[[params$dependent_response_ind]])
+  
   print(paste("Correltation: Condition =", my_target))
+  print(paste("Pairs:", N_paris, ", Degree of Freedom:", N_paris-2))
   
   print(cor.test(y = plot_data_ind[[params$dependent_response_ind]], x = plot_data_ind[["performance_reverse"]], method = "spearman"))
   }
@@ -262,7 +265,10 @@ for (my_session in c(2:4)) {
   mutate(performance_reverse = 100 - Performance) %>%
   filter(SessionOrder == my_session)
   
+  N_paris<- length(plot_data_ind[[params$dependent_response_ind]])
+  
   print(paste("Correltation: Session =", my_session))
+  print(paste("Pairs:", N_paris, ", Degree of Freedom:", N_paris-2))
   
   print(cor.test(y = plot_data_ind[[params$dependent_response_ind]], x = plot_data_ind[["performance_reverse"]], method = "spearman"))
   }
@@ -298,11 +304,14 @@ for (my_session in c(2:4)) {
              Target) %>%
       mutate(performance_reverse = 100 - Performance) %>%
       filter(Target == my_target, SessionOrder == my_session)
+    
+    N_paris<- length(plot_data_ind[[params$dependent_response_ind]])
   
   test<- cor.test(y = plot_data_ind[[params$dependent_response_ind]], x = plot_data_ind[["performance_reverse"]], method = "spearman")
   
   if(test$p.value < 0.1){
     print(paste("Correltation: Condition =", my_target,",", "Session =", my_session))
+    print(paste("Pairs:", N_paris, ", Degree of Freedom:", N_paris-2))
   }
   print(test$p.value)
   }
@@ -325,7 +334,10 @@ plot_data_ind <- ind_data %>%
       mutate(performance_reverse = 100 - Performance) %>%
       filter(Target == my_target, SessionOrder == my_session)
 
+N_paris<- length(plot_data_ind[[params$dependent_response_ind]])
+
 print(paste("Correltation: Condition =", my_target,",", "Session =", my_session))
+print(paste("Pairs:", N_paris, ", Degree of Freedom:", N_paris-2))
 
 test<- cor.test(y = plot_data_ind[[params$dependent_response_ind]], x = plot_data_ind[["performance_reverse"]], method = "spearman")
 
@@ -344,7 +356,10 @@ plot_data_ind <- ind_data %>%
       mutate(performance_reverse = 100 - Performance) %>%
       filter(Target == my_target, SessionOrder == my_session)
 
+N_paris<- length(plot_data_ind[[params$dependent_response_ind]])
+
 print(paste("Correltation: Condition =", my_target,",", "Session =", my_session))
+print(paste("Pairs:", N_paris, ", Degree of Freedom:", N_paris-2))
 
 test<- cor.test(y = plot_data_ind[[params$dependent_response_ind]], x = plot_data_ind[["performance_reverse"]], method = "spearman")
 
@@ -383,7 +398,10 @@ for (ind_rating in c("Excellent", "Good", "Average", "Poor", "Very poor")) {
         mutate(performance_reverse = 100 - Performance)%>% 
         filter(My_Performance == ind_rating)
   
+  N_paris<- length(plot_data_ind[[params$dependent_response_ind]])
+  
   print(paste("Correltation: My_rating =", ind_rating))
+  print(paste("Pairs:", N_paris, ", Degree of Freedom:", N_paris-2))
   
   test<- cor.test(y = plot_data_ind[[params$dependent_response_ind]], x = plot_data_ind[["performance_reverse"]], method = "spearman")
   
@@ -422,11 +440,14 @@ for (ind_rating in c("Excellent", "Good", "Average", "Poor", "Very poor")) {
                Target) %>%
         mutate(performance_reverse = 100 - Performance)%>% 
         filter(My_Performance == ind_rating, Target == my_target)
+    
+    N_paris<- length(plot_data_ind[[params$dependent_response_ind]])
   
     test<- cor.test(y = plot_data_ind[[params$dependent_response_ind]], x = plot_data_ind[["performance_reverse"]], method = "spearman")
   
     if(test$p.value < 0.1){
       print(paste("Correltation: Condition =", my_target, ", Rated_performance =", ind_rating))
+      print(paste("Pairs:", N_paris, ", Degree of Freedom:", N_paris-2))
     }
     print(test$p.value)
   }
@@ -446,10 +467,13 @@ plot_data_ind <- ind_data %>%
                Target) %>%
         mutate(performance_reverse = 100 - Performance)%>% 
         filter(My_Performance == ind_rating, Target == my_target)
+
+N_paris<- length(plot_data_ind[[params$dependent_response_ind]])
   
     test<- cor.test(y = plot_data_ind[[params$dependent_response_ind]], x = plot_data_ind[["performance_reverse"]], method = "spearman")
   
     print(paste("Correltation: Condition =", my_target, ", Rated_performance =", ind_rating))
+    print(paste("Pairs:", N_paris, ", Degree of Freedom:", N_paris-2))
     print(test)
     
 #----
@@ -462,10 +486,13 @@ plot_data_ind <- ind_data %>%
                Target) %>%
         mutate(performance_reverse = 100 - Performance)%>% 
         filter(My_Performance == ind_rating, Target == my_target)
+
+N_paris<- length(plot_data_ind[[params$dependent_response_ind]])
   
     test<- cor.test(y = plot_data_ind[[params$dependent_response_ind]], x = plot_data_ind[["performance_reverse"]], method = "spearman")
   
     print(paste("Correltation: Condition =", my_target, ", Rated_performance =", ind_rating))
+    print(paste("Pairs:", N_paris, ", Degree of Freedom:", N_paris-2))
     print(test)
 
 ```
@@ -503,11 +530,14 @@ for (ind_rating in c("Excellent", "Good", "Average", "Poor", "Very poor")) {
                SessionOrder) %>%
         mutate(performance_reverse = 100 - Performance)%>% 
         filter(My_Performance == ind_rating, SessionOrder == my_session)
+    
+    N_paris<- length(plot_data_ind[[params$dependent_response_ind]])
   
     test<- cor.test(y = plot_data_ind[[params$dependent_response_ind]], x = plot_data_ind[["performance_reverse"]], method = "spearman")
   
     if(test$p.value < 0.1){
       print(paste("Correltation: Session =", my_session, ", Rated_performance =", ind_rating))
+      print(paste("Pairs:", N_paris, ", Degree of Freedom:", N_paris-2))
     }
     print(test$p.value)
   }
@@ -532,11 +562,14 @@ plot_data_ind <- ind_data %>%
                SessionOrder) %>%
         mutate(performance_reverse = 100 - Performance)%>% 
         filter(My_Performance == ind_rating, SessionOrder == my_session)
+
+N_paris<- length(plot_data_ind[[params$dependent_response_ind]])
   
     test<- cor.test(y = plot_data_ind[[params$dependent_response_ind]], x = plot_data_ind[["performance_reverse"]], method = "spearman")
   
     if(test$p.value < 0.1){
       print(paste("Correltation: Session =", my_session, ", Rated_performance =", ind_rating))
+      print(paste("Pairs:", N_paris, ", Degree of Freedom:", N_paris-2))
     }
     print(test)
     
@@ -551,11 +584,14 @@ plot_data_ind <- ind_data %>%
                SessionOrder) %>%
         mutate(performance_reverse = 100 - Performance)%>% 
         filter(My_Performance == ind_rating, SessionOrder == my_session)
+
+N_paris<- length(plot_data_ind[[params$dependent_response_ind]])
   
     test<- cor.test(y = plot_data_ind[[params$dependent_response_ind]], x = plot_data_ind[["performance_reverse"]], method = "spearman")
   
     if(test$p.value < 0.1){
       print(paste("Correltation: Session =", my_session, ", Rated_performance =", ind_rating))
+      print(paste("Pairs:", N_paris, ", Degree of Freedom:", N_paris-2))
     }
     print(test)
     
@@ -661,15 +697,19 @@ for (ind_rating in c("Excellent", "Good", "Average", "Poor", "Very poor")) {
         mutate(performance_reverse = 100 - Performance)%>% 
         filter(Target == my_target, My_Performance == ind_rating, SessionOrder == my_session)
       
+      N_paris<- length(plot_data_ind[[params$dependent_response_ind]])
+      
       if(length(plot_data_ind[[params$dependent_response_ind]]) < 3){
         message<- paste("There is less than 3 data point for the Condition =", my_target, ", Session =", my_session, ", Rated individual Performance =", ind_rating)
         print(message)
       } else {
         cor_test_results<- cor.test(x = plot_data_ind[["performance_reverse"]], y = plot_data_ind[[params$dependent_response_ind]], method = "spearman")
         
-        if(cor_test_results$p.value < 0.1)
+        if(cor_test_results$p.value < 0.1){
           print(paste("Correltation: Condition =", my_target, ", Session =", my_session, ", Rated individual Performance =", ind_rating))
-          print(cor_test_results$p.value)
+          print(paste("Pairs:", N_paris, ", Degree of Freedom:", N_paris-2))
+        }
+        print(cor_test_results$p.value)
       }
     }
   }
@@ -700,7 +740,7 @@ N_paris<- length(plot_data_ind[[params$dependent_response_ind]])
 
 print(paste("Correltation: Condition =", current_target, ", Session =", current_Session, ", Rated individual Performance =", current_my_performance))
 
-print(paste("Observations:", N_paris))
+print(paste("Pairs:", N_paris, ", Degree of Freedom:", N_paris-2))
 
 cor.test(y = plot_data_ind[[params$dependent_response_ind]], x = plot_data_ind[["performance_reverse"]], method = "spearman")
 
@@ -725,7 +765,7 @@ N_paris<- length(plot_data_ind[[params$dependent_response_ind]])
 
 print(paste("Correltation: Condition =", current_target, ", Session =", current_Session, ", Rated individual Performance =", current_my_performance))
 
-print(paste("Observations:", N_paris))
+print(paste("Pairs:", N_paris, ", Degree of Freedom:", N_paris-2))
 
 cor.test(y = plot_data_ind[[params$dependent_response_ind]], x = plot_data_ind[["performance_reverse"]], method = "spearman")
 
